pingpong_app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong-app
  template:
    metadata:
      labels:
        app: pingpong-app
    spec:
      securityContext:
        fsGroup: 1000
      volumes: # Define volume
        - name: shared-pingpong-app
          persistentVolumeClaim:
            claimName: shared-pvc
      containers:
        - name: pingpong-app
          image: nomadxynta/pingpong_app:1.0
          volumeMounts: # Mount volume
          - name: shared-pingpong-app
            mountPath: /app/logs
